--- a/1_etiquetas_basicas.html
+++ b/1_etiquetas_basicas.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Etiquetas Basicas 1</title>
+    <title>Etiquetas Basicas 1</title>
 </head>
 <body>
   <!-- titulos y subtitulos -->
 <!-- Los elementos de encabezado implementan seis niveles de encabezado del documento, <h1> es el mas importante, y <h6>, el menos importante. Un elemento de encabezado describe brevemente el tema de la seccion que presenta. La informacion de encabezado puede ser usada por los agentes usuarios, por ejemplo, para construir una tabla de contenidos para un documento automaticamente. -->
-<h1>Esto es un titulo principal</h1>
+<h1> Esto es un titulo principal </h1>
 <h2>Heading Level 2</h2>
 <h3>Heading Level 3</h3>
 <h4>Heading Level 4</h4>
@@ -26,6 +26,13 @@ oident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
 <span> este es el segundo spam: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
 <br>
 <strong>ESTO ES UN TEXTO RESALTADO</strong>
-</p>
+<!-- imagenes -->
 </body>
 </html>
+<h3>imagenes</h3>
+<h4>opcion 1: absoluto</h4>
+<img src="https://e7.pngegg.com/pngimages/978/488/png-clipart-doge-weather-doge-run-android-doge-coin-carnivoran-dog-like-mammal.png"alt="doge facha" width="500px">
+<img src="https://avatars.githubusercontent.com/u/89085238?v=4"alt="mosquito"width="300px">
+<h4>opcion 2 :relativo</h4>
+<img src="img/dragon.png"alt="dragon" width="300px">
+<img src="img/hamster.png"alt="hamster" width="400px">
