--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="cabecera">
     <h1 id="tituloPrincipal">Parque Norte</h1>
     <h3>cfp nro 10 "Raul Scalabrini Ortiz"</h3>
-    <img src="" alt="logo cfp">
+    <img src="img/cfp10.png" alt="logo cfp">
   </header>
 
   <nav class="navPrincipal">
@@ -30,13 +30,14 @@
 <p>Here is some normal text that is neither boring nor exciting.</p>
 <p class="exciting-text">Contributing to MDN is easy and fun.</p>
    <div class="galeria">
-     <img src="" alt="foto1">
-     <img src="" alt="foto2">
-     <img src="" alt="foto3">
-     <img src="" alt="foto4">
+     <img src="img/carpincho.png" alt="carpincho">
+     <img src="img/escuela1.png" alt="escuela1">
+     <img src="img/escuela2.png" alt="escuela2">
+     <img src="img/deporte.png" alt="deporte">
    </div>
 
   </main>
+  <hr>
   <section class="noticias">
     <h3>notocias del cfp</h3>
     <article class="nota">
@@ -53,6 +54,7 @@
 
     </article>
   </section>
+  <hr>
    <footer class="piePagina">
      <div class="pie1">
        <ul>
