--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
   <hr>
   <section class="noticias">
     <h3>notocias del cfp</h3>
-    <article class="nota">
+    <article class="nota1">
       <h4>titulo nota1</h4>
-      <img src="" alt="imagen nota1">
+      <img src="img/buho.png" alt="imagen nota1">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <a href="#"class="boton">link1</a>
     </article>
-    <article class="nota">
+    <article class="nota2">
       <h4>titulo nota2</h4>
-      <img src="" alt="imagen nota2">
+      <img src="img/escuela3.png" alt="imagen nota2">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <a href="#"class="boton">link2</a>
 
