--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p class="exciting-text">Contributing to MDN is easy and fun.</p>
    <div class="galeria">
      <img src="img/carpincho.png" alt="carpincho">
-     <img src="img/escuela1.png" alt="escuela1">
+     <img id="pfixed"src="img/escuela1.png" alt="escuela1">
      <img src="img/escuela2.png" alt="escuela2">
      <img src="img/deporte.png" alt="deporte">
    </div>
