--- a/index.html
+++ b/index.html
@@ -5,71 +5,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CFP-Parque norte</title>
-  <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="css\grid.css">
 </head>
-<body>
+<body class="container">
   <header class="cabecera">
     <h1 id="tituloPrincipal">Parque Norte</h1>
     <h3>cfp nro 10 "Raul Scalabrini Ortiz"</h3>
-    <img src="img/cfp10.png" alt="logo cfp">
+    <img src="img\cfp10.jpg" alt="logo cfp">
   </header>
 
   <nav class="navPrincipal">
-   <ul>
-    <li>home</li>
-    <li>link2</li>
-    <li>link3</li>
-   </ul>
+    <ul>
+      <li>home</li>
+      <li>link2</li>
+      <li>link3</li>
+    </ul>
   </nav>
 
   <main class="principal">
-   <h3>titulo de contenido principal</h3>
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-   <p class="boring-text">Here is some plain old boring text.</p>
-<p>Here is some normal text that is neither boring nor exciting.</p>
-<p class="exciting-text">Contributing to MDN is easy and fun.</p>
-   <div class="galeria">
-     <img src="img/carpincho.png" alt="carpincho">
-     <img id="pfixed"src="img/escuela1.png" alt="escuela1">
-     <img src="img/escuela2.png" alt="escuela2">
-     <img src="img/deporte.png" alt="deporte">
-   </div>
+    <h3>titulo de contenido principal</h3>
+    <p class="boring-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p class="boring-text">Here is some plain old boring text.</p>
+    <p>Here is some normal text that is neither boring nor exciting.</p>
+    <p class="exciting-text">Contributing to MDN is easy and fun.</p>
+    <div class="galeria">
+      <img src="img\deportes2.png" alt="deportes">
+      <img src="img\deportes.png" alt="deportes2">
+      <img src="img\lampara.png" alt="lampara">
+      <img src="img\mochila.png" alt="mochila escolar">
+    </div>
 
   </main>
   <hr>
   <section class="noticias">
-    <h3>notocias del cfp</h3>
-    <article class="nota1">
-      <h4>titulo nota1</h4>
-      <img src="img/buho.png" alt="imagen nota1">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <a href="#"class="boton">link1</a>
-    </article>
-    <article class="nota2">
-      <h4>titulo nota2</h4>
-      <img src="img/escuela3.png" alt="imagen nota2">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <a href="#"class="boton">link2</a>
-
-    </article>
+    <h3>Noticias del cfp</h3>
+      <article class="nota1">
+        <h4>titulo nota1</h4>
+        <img src="img\escuela2.png" alt="imagen nota1">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a href="#"class="boton">Link1</a>
+      </article>
+      <article class="nota2">
+        <h4>titulo nota2</h4>
+        <img src="img\escuela.png" alt="imagen nota2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a href="#"class="boton">Link2</a>
+      </article>
   </section>
   <hr>
-   <footer class="piePagina">
-     <div class="pie1">
-       <ul>
-         <li>red social 1</li>
-         <li>red social 2</li>
-         <li>red social 3</li>
-       </ul>
-     </div>
-     <div class="pie2">
-       <p>texto corto 1</p>
-       <p>texto corto 2</p>
-
-     </div>
-
-
-   </footer>
+  <footer class="piePagina">
+    <div class="pie1">
+      <ul>
+        <li>redsocial 1</li>
+        <li>redsocial 2</li>
+        <li>redsocial 3</li>
+      </ul>
+    </div>
+    <div class="pie2">
+      <p>texto corto 1</p>
+      <p>texto corto 2</p>
+    </div>
+  </footer>
 </body>
 </html>
