--- a/dragon ball.html
+++ b/dragon ball.html
@@ -1,6 +1,5 @@
-dragon ball.html
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +13,7 @@ dragon ball.html
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-      <img src="" alt="logopagina" width="30" height="24">
+      <img src="/home/cfp10/3ro-brian/img/dbz.png" alt="dbz" width="100" height="90"> 
     </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +33,32 @@ dragon ball.html
       </div>
     </div>
   </nav>
-<header>principal</header>
+ <header class="container-fluid">
+  <div class="row">
+
+
+   <div id="carouselExampleSlidesOnly" class="carousel slide col-lg-8" data-bs-ride="carousel">
+    <div class="carousel-inner">
+     <div class="carousel-item active">
+      <img src="/home/cfp10/3ro-brian/img/gokufacha.jpeg" class="d-block w-50" alt="gokufacha">
+     </div>
+
+    <div class="carousel-item">
+      <img src="/home/cfp10/3ro-brian/img/vegito.jpg" class="d-block w-50" alt="vegito">
+    </div>
+
+     <div class="carousel-item">
+      <img src="/home/cfp10/3ro-brian/img/vegueta.jpg" class="d-block w-50" alt="vegeta">
+    </div>
+   </div>
+   <div class="col-lg-4">texto y call to accion
+
+  </div>
+  </div>
+ </div>
+ </header>
+</div>
+
 </div>
 <section class="features">
 <div>feature 1</div>
