--- a/TP4.html
+++ b/TP4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dragonball</title>
+    <title>Felinos Salvajes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/TP4.css">
     
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <a class="nav-link" href="#León">
-            <img class=" rounded-6" src="img/león.png" alt="goku chiquito" height="150px" >
+            <img class=" rounded-6" src="img/león.png" alt="goku chiquito" height="150px" width="150px" >
             <p class="text-center fs-2">León</p>
           </a>
         </div>
@@ -129,21 +129,23 @@
         <!--historia seccion-->
         <section id="historia" class="historia col-lg-6">
             <h4 class="mt-2 display-6">Linces</h4>
-            <img class="rounded-4 mt-2" src="img/historia.png" alt="historia" width="50%">
+            <img class="rounded-4 mt-2" src="img/lince.png" alt="historia" width="500px">
             <p class="mt-2">Más allá de los grandes felinos vistos hasta ahora en el artículo, destacan los linces como otro de los grupos de felinos más abundantes del planeta. Se trata de felinos tamaño mediano y con una amplia distribución geográfica. Los linces son depredadores con un elevado interés en el correcto funcionamiento de los ecosistemas a los que pertenecen. Se caracterizan por ser animales muy escurridizos y difíciles de ver, con una gran agilidad y hábitos de caza principalmente nocturnos. Entre las especies de linces más emblemáticas destacan:</p>
         </section>
       </div>
       <div class="row">
         <!--personajes seccion-->
         <section id="personajes" class="personajes col-lg-6">
-          <h4 class="mt-2 display-6">Habitats</h4>
-          <img class="rounded-4 mt-2" src="img/personajes.png" alt="historia" width="70%">
+          <h4 class="mt-2 display-6">Tigres</h4>
+          <img class="rounded-4 mt-2" src="img/tigre sur de china.png" alt="felino" width="600px">
+          <p>El tigre (Panthera tigris) es considerado también, a nivel mundial, uno de los grandes felinos más sorprendentes. Encuentran su hábitat natural en oriente, en países como la India, Bangladesh, Indonesia y Siberia, donde son venerados y temidos al mismo tiempo. En la actualidad existen 6 subespecies de tigres, siendo, probablemente, el tigre de Bengala (Panthera tigris tigris) y el tigre siberiano (Panthera tigris virgata), los más conocidos.</p>
         </section>
         <!--memes seccion-->
         <section id="memes" class="memes col-lg-6">
-          <h4 class="mt-2 display-6">Memes</h4>
-          <img class="rounded-4 mt-2" src="img/memes.jpeg" alt="historia" width="60%">
-          <img class="rounded-4 mt-2" src="img/meme3.jpg" alt="historia" width="60%">
+          <h4 class="mt-2 display-6">Gatos salvajes</h4>
+          <img class="rounded-4 mt-2" src="img/felino andino.png" alt="felino" width="500px">
+          <p>Para conocer más nombres de especies de felinos de tamaño mediano, es posible agruparlos como gatos salvajes, ya que todas y cada una de estas especies viven en estado salvaje en bosques y selvas, principalmente en el continente asiático. </p>
+          <img class="rounded-4 mt-2" src="" alt="" width="60%">
         </section>
       </div>
     </div>
