--- a/TP3.html
+++ b/TP3.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>tp3</title>
-  <link rel="stylesheet" href="css/tp3.css">
+  <link rel="stylesheet" href="css/TP3.css">
 </head>
 <body>
   <header class="minipekka">
     <h1 id="minipekka1">Feria Del Libro</h1>
     <article class="espiritu">
-     <img src="img\Feria del libro logo.webp" alt="logo de la feria del libro">
+     <img src="img/feria del libro logo.png" alt="logo de la feria del libro" width="400px" height="200px" >
      </article>
      <h2>Cientos de personas participan año a año del evento literario mas importante
     de la Argentina.</h2>
@@ -69,12 +69,11 @@ El jueves 28 abre al público general y se convierte en una verdadera ciudad de 
   <footer id="acercade" class="piedepagina">
       <div class="socialmedia">
         <ul>
-          <li><a href="https://www.facebook.com/feriadellibro" target="_blank"><img src="img\facebook.png" alt="icono de facebook"</a></li>
-          <li><a href="https://www.instagram.com/ferialibroba/" target="_blank"><img src="img\instagram.jpg" alt="icono de instagram"</a></li>
+          <li><a href="https://www.facebook.com/feriadellibro" target="_blank"><img src="img\facebook.png" alt="icono de facebook"></a></li>
+          <li><a href="https://www.instagram.com/ferialibroba/" target="_blank"><img src="img/instagram.png" alt="icono de instagram"></a></li>
           <li><a href="https://twitter.com/ferialibro" target="_blank"><img src="img\twitter.png" alt="icono de twitter"> </a></li>
         </ul>
       </div>
-  <img src="img\fondo.jpg" alt="fondo1">
 </footer>
 </body>
 </html>
